--- a/web/style.css
+++ b/web/style.css
@@ -2,20 +2,40 @@
     margin: 0;
     padding: 0;
 }
-/*img{*/
-/*    width: 100%;*/
-/*    background-attachment: fixed;*/
-/*    background-repeat: no-repeat;*/
-/*}*/
+
 body{
+    background-image: url("anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg");
     background-position: top;
-    padding-top: 40px;
+    animation-name: st;
+    animation-duration: 3s;
+}
+@keyframes st{
+    0%{
+        background-image: url("backPic.png");
+    }
+    100%{
+        background-image: url("anime-girls-no-game-no-life-shiro-no-game-no-life-sora-no-game-no-life-wallpaper-preview.jpg");
+    }
 }
 nav{
+    opacity: 95%;
+    animation-name: wds;
+    animation-duration: 5s;
+}
+div{
     width: 100%;
     height: 75px;
     background-color: #ededed;
-    opacity: 95%;
+
+}
+
+@keyframes wds{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 95%;
+    }
 }
 
 article{
@@ -23,7 +43,6 @@ article{
     height: 100px;
     background-color: #cd96bc;
     float: left;
-    opacity: 95%;
 }
 article:hover{
     background-color: #ededed;
@@ -33,20 +52,24 @@ aside{
     height: 100px;
     background-color: #acd0f4;
     float: right;
-    opacity: 95%;
 }
+
 aside:hover{
     background-color: #ededed;
 }
+
 footer{
     clear: both;
 }
+
 h1{
     font-family: "Comic Sans MS";
     font-size: 45px;
     color: #436184;
     text-align: center;
 }
+
+
 p{
     font-family: "Comic Sans MS";
     font-size: 30px;
