--- a/web/css/style.css
+++ b/web/css/style.css
@@ -19,25 +19,25 @@
 }
 
 nav{
-    opacity: 95%;
-    display: block;
     animation-name: wds;
     animation-duration: 8s;
-
+    margin-top: 0;
 }
 div{
-    width: 80%;
+    width: 100%;
     height: auto;
-    margin: 20px auto;
+    margin: auto;
     padding: 20px;
-    background-color: #ededed;
+    background-color: #ffffff;
     text-align: center;
     font-size: 1em;
     font-family: "Comic Sans MS";
 }
 
 #nav{
-    font-size: 45px;
+    font-size: 1.5em;
+    position: fixed;
+    top:0;
 }
 
 a{
@@ -45,7 +45,7 @@ a{
 }
 
 a:hover{
-    color: #ededed;
+    color: #ffffff;
     transition: 300ms;
 }
 
@@ -54,7 +54,7 @@ a:hover{
         opacity: 0;
     }
     100%{
-        opacity: 95%;
+        opacity: 100%;
     }
 }
 
@@ -66,9 +66,38 @@ footer{
 
 
 p{
-
     font-size: 30px;
     color: #436184;
 }
 
+#video{
+    animation-name: wds;
+    animation-duration: 4s;
+    position: absolute;
+    top: 225px;
+    left: 20%;
+}
 
+main {
+    width: 85%;
+    height: 890px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4.55em;
+    background-color: rgba(72, 61, 139, 0.95);
+    animation-name: wds;
+    animation-duration: 4s;
+}
+
+footer {
+    position:fixed;
+    bottom:0;
+    width:100%;
+    height:60px;
+    background-color: #ffffff;
+}
+
+#title {
+    font-family: "Comic Sans MS";
+
+}
