--- a/web/css/style.css
+++ b/web/css/style.css
@@ -31,11 +31,11 @@ div{
     background-color: #ffffff;
     text-align: center;
     font-size: 1em;
-    font-family: "Comic Sans MS";
+    font-family: "Macondo";
 }
 
 #nav{
-    font-size: 1.5em;
+    font-size: 2em;
     position: fixed;
     top:0;
 }
@@ -98,6 +98,10 @@ footer {
 }
 
 #title {
-    font-family: "Comic Sans MS";
-
+    position: absolute;
+    top: 160px;
+    left: 45%;
+    font-size: 3em;
+    color: white;
+    font-family: 'Amatic SC', cursive;
 }
