--- a/BootstrapWeb/style.css
+++ b/BootstrapWeb/style.css
@@ -12,7 +12,7 @@ body {
     text-align: left;
 }
 #header-container{
-    /*background-color: white;*/
+    background-color: white;
     width: 200px;
     min-width: 200px;
     position: fixed;
@@ -27,9 +27,7 @@ body {
     padding-right: 0;
 }
 .col{
-    padding: 0 3px;
-    margin-top: 5px;
-    width: auto;
+    padding: 4px 3px;
 }
 .main-container{
     flex: 1;
@@ -40,14 +38,43 @@ body {
     /*padding-top: 18px;*/
     display: flex;
     position: relative;
-    padding: 18px 15px;
+    padding: 18.3px 15px;
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
     background-color: #fff;
 }
 .primarySiteLinks{
-    margin-top: 30px;
+    margin-top: 29px;
+    background-color: transparent;
+    display: block;
+    position: static;
+    top: auto;
+    left: auto;
+    bottom: auto;
+    visibility: visible;
+}
+.background-pattern:before {
+    content: ' ';
+    display: block;
+    background-color: #fff;
+    height: 15px;
+    width: 100%;
+    position: absolute;
+    top: -8px;
+    transform: rotate(-4deg);
+    z-index: 1;
+}
+.background-pattern:after {
+    content: ' ';
+    display: block;
+    background: url(https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/dots.png) #ffffff;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 .mobile-header{
     text-align: center;
@@ -55,7 +82,7 @@ body {
 .nav-item{
     text-align: center;
     border-bottom-width: 0;
-    padding: 10px 0;
+    padding: 7px 0;
     font-family: "Brandon Grotesque Black", Arial, Helvetica, sans-serif;
     font-size: 94%;
     text-transform: uppercase;
@@ -64,6 +91,12 @@ body {
 }
 a.nav-link {
     color: #0b6a38;
+}
+a.nav-link:hover {
+    color: #c8102e;
+}
+a:hover{
+    color: #c8102e;
 }
 .quick-bar {
     width: 518.42px;
@@ -76,24 +109,21 @@ a.nav-link {
     white-space: nowrap;
     font-weight: bold;
 }
+
 .collage{
     margin:0;
 }
 .container {
     position: absolute;
-    right: 0;
+    right: 8.5%;
     display: inline;
+    width:75%;
 }
 .contents{
     display: flex;
+    width: 100%;
 }
-/*div.quick-bar .store-location a:first-child {*/
-/*    margin-top: 0;*/
-/*    font-family: "FrutigerLTCom-Bold", Arial, Helvetica, sans-serif;*/
-/*    font-size: 100%;*/
-/*    line-height: 169%;*/
-/*    text-transform: none;*/
-/*}*/
+
 .sign-in{
     vertical-align: middle;
     margin: 9px;
@@ -142,10 +172,199 @@ img {
     vertical-align: middle;
     border-style: none;
 }
+#contain-button{
+    display: inline-block;
+    position: absolute;
+    top: 30px;
+    left: 240px;
+}
+button{
+    width: 144px;
+    height: 48px;
+    margin: 0 8px 0 0;
+    padding: 8px 20px 7px 10px;
+    border-radius: 100px;
+    box-shadow: 0 15px 40px 0 rgb(208 31 47 / 21%);
+    background-color: #c8102e;
+    font-family: "Brandon Grotesque Black", Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.69px;
+    text-align: left;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+    border: none;
+}
+.split-cta-line1{
+    font-size: 11px;
+    width: 42px;
+    height: 16px;
+    margin: 1px 31px 16px 8px;
+    position: absolute;
+    top: 8px;
+    left: 41px;
+}
+.split-cta-line2{
+    font-size: 14px;
+    width: 73px;
+    height: 20px;
+    margin: 12px 0 1px 8px;
+    position: absolute;
+    top: 8px;
+    left: 41px;
+}
+#dddd{
+    position: relative;
+    margin-right: 0;
+    width: 158%;
+}
 a {
     color: #0b6a38;
     text-decoration: none;
     background-color: transparent;
+}
+#fl{
+    font-size: 20px;
+}
+#block{
+    width: 74%;
+    height: 370px;
+    background-color: #0b6a38;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-image: url(https://www.krispykreme.com/App_Themes/krispykremenew/Content/images/dots-for-dark-background.jpg);
+}
+
+.title{
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: #fff;
+    font-size: 1em;
+    margin-top: 15%;
+    margin-left: 28%;
+    font-family: "Frutiger LT Std 55 Roman", Arial, Helvetica, sans-serif;
+}
+
+.title strong {
+    margin: 0 0 15px 0;
+    display: block;
+    text-transform: uppercase;
+    font-family: "Brandon Grotesque Black", Arial, Helvetica, sans-serif;
+    font-size: 350%;
+    line-height: 106%;
+    letter-spacing: 1.5px;
+}
+.background-pattern{
+    position: relative;
+    display: block;
+    overflow: hidden;
+    flex-grow: 1;
+    margin-top: 48px;
+}
+.social-media {
+    margin-top: 20px;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+.social-media-promo ul.social-media li {
+    vertical-align: top;
+    display: inline-block;
+    margin-right: 16px;
+}
+.social-media a {
+    color: #0b6a38;
+    background-color: #fff;
+    width: 32px;
+    height: 32px;
+    line-height: 34px;
+    text-align: center;
+    font-size: 107%;
+    border-radius: 100px;
+    display: block;
+}
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+.fa-instagram:before {
+    content: "";
+    /*content: " ";*/
+}
+.fa-twitter:before {
+    content: "";
+    /*content: " ";*/
+
+}
+.fa-facebook:before{
+    content: "";
+    /*content: " ";*/
+
+}
+li{
+    list-style-type: none;
+    vertical-align: top;
+    display: inline-block;
+    margin-right: 16px;
+}
+
+.copy em {
+    font-family: Arial, Helvetica, sans-serif,"Juice ITC";
+    font-style: normal;
+    font-size: 100%;
+    line-height: 100%;
+    letter-spacing: 1px;
+    color: #c8102e;
+    display: block;
+}
+.copy{
+    padding: 85px 20px 0 50px;
+    width: 45%;
+}
+.copy p {
+    margin-top: 15px;
+    font-size: 88%;
+    line-height: 172%;
+    display: block;
+    color: #303030;
+}
+.copy strong {
+    font-size: 300%;
+    line-height: 100%;
+}
+.copy .btn {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin: 20px 8px 0 8px;
+}
+.btn-secondary{
+    background-color: #fff;
+    color: #0b6a38;
+    font-family: "Brandon Grotesque Black", Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border: 0;
+    cursor: pointer;
+    padding: 13px 10px;
+}
+.shadow{
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+}
+
+.promote{
+    top: 1600px;
 }
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
