--- a/PhpLesson/style.css
+++ b/PhpLesson/style.css
@@ -1,3 +1,4 @@
+
 .main-wrapper{
     margin: 0 auto;
     width: 1000px;
@@ -16,7 +17,12 @@ header nav ul{
 }
 header nav ul li{
     float: left;
+    transition-duration: 100ms;
     list-style: none;
+}
+
+header nav ul li:hover{
+    opacity: 0.5;
 }
 header nav ul li a {
     font-family: Arial;
@@ -52,7 +58,7 @@ header .nav-login form input {
 }
 header .nav-login form button {
     float: left;
-    width: 60px;
+    width: 80px;
     height: 30px;
     margin-right: 10px;
     border: none;
@@ -61,6 +67,7 @@ header .nav-login form button {
     font-size: 16px;
     color: #111111;
     cursor: pointer;
+    transition-duration: 100ms;
 }
 header .nav-login form button:hover{
     background-color: #cccccc;
@@ -69,7 +76,7 @@ header .nav-login a {
     display: block;
     width: 60px;
     height: 60px;
-    boder: none;
+    border: none;
     float: left;
     background-color: #ffffff;
     font-family: Arial;
@@ -77,6 +84,10 @@ header .nav-login a {
     color: #111111;
     line-height: 60px;
     cursor: pointer;
+    transition-duration: 100ms;
+}
+header .nav-login a:hover{
+    opacity: 0.5;
 }
 .main-container{
     padding-top: 40px;
@@ -89,6 +100,7 @@ header .nav-login a {
     line-height: 50px;
     text-align: center;
 }
+
 /*Sign up style*/
 .signup-form {
     width: 400px;
@@ -125,3 +137,79 @@ header .nav-login a {
 .signup-form button:hover{
     background-color: #111111;
 }
+
+/* Personal Style */
+.user-sets {
+    width: 90%;
+    height: 1000px;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: #fff;
+    font-family: Arial;
+    border: solid 2px #222;
+    padding: 2%;
+    text-align: center;
+}
+.user-sets h3 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 3em;
+}
+.avatar{
+    width: 50px;
+    border-radius: 50%;
+}
+.user-name{
+    font-size: 1.5em;
+    display: inline-block;
+}
+
+/* Post Style */
+.post-sections{
+    background-color: #ccc;
+    width: 100%;
+    height: 30%;
+    border: solid 2px #222;
+    font-family: Arial;
+}
+
+.info {
+    text-align: left;
+    background-color: #fff;
+    width: 100%;
+    height: 60px;
+    font-family: Arial;
+    border: none;
+}
+
+.subject{
+    width: 99.6%;
+    height: 40px;
+    border: none;
+}
+
+.content{
+    margin-bottom: 5px;
+    width: 99.6%;
+    height: 100px;
+    border: none;
+}
+
+.post-sets {
+    float: right;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border: solid 2px #222;
+    border-radius: 50%;
+    font-family: Arial;
+    text-align: center;
+    line-height: 3.2;
+    cursor: pointer;
+    transition-duration: 100ms;
+}
+.post-sets:hover {
+    opacity: 0.5;
+}
+
+
+
