--- a/PhpLesson/style.css
+++ b/PhpLesson/style.css
@@ -141,7 +141,7 @@ header .nav-login a:hover{
 /* Personal Style */
 .user-sets {
     width: 90%;
-    height: 1000px;
+    height: auto;
     border-radius: 10px;
     margin: 10px;
     background-color: #fff;
@@ -153,6 +153,10 @@ header .nav-login a:hover{
 .user-sets h3 {
     font-family: 'Amatic SC', cursive;
     font-size: 3em;
+}
+
+.post-body{
+    width: 99.6%;
 }
 .avatar{
     margin-left: 5px;
@@ -166,13 +170,17 @@ header .nav-login a:hover{
 }
 
 /* Post Style */
+.new-post{
+    font-size: 2em;
+    margin-bottom: 10px;
+}
 .post-sections{
     background-color: #ccc;
     width: 100%;
-    height: 30%;
+    height: 300px;
     border: solid 2px #222;
     font-family: Arial;
-
+    margin-bottom: 80px;
 }
 
 .info {
@@ -192,20 +200,31 @@ header .nav-login a:hover{
 
 }
 
+#time{
+    width: 160px;
+    margin-top: -3.5%;
+    margin-right: 0;
+    display: inline-block;
+}
+
 .subject{
-    width: 99.6%;
+    /*width: 99.6%;*/
+    width:100%;
     height: 40px;
     border: none;
     margin-top: 1px;
     font-size: 1.2em;
+    background-color: #fff;
 }
 .content{
     margin-bottom: 5px;
-    width: 99.6%;
+    /*width: 99.6%;*/
+    width:100%;
     height: 140px;
     border: none;
     margin-top: 1px;
     font-size: 1em;
+    background-color: #fff;
 }
 
 .post-sets {
